app/media/page.module.scss
.section {
  margin: 5rem auto;
}

.youtube_container {
  display: flex;
  gap: 1.3rem;
  flex-wrap: wrap;
  & > div {
    width: calc(50% - 1.3rem);
    iframe {
      width: 100%;
      z-index: 5;
      position: relative;
    }
  }
}

.news_container {
  margin: 3rem 0;
  display: flex;
  overflow-x: scroll;
  & > div {
    flex: 0 0 25%;
  }
}

@media (max-width: 768px) {
  .section {
    margin: 3rem auto;
  }
  .youtube_container {
    & > div {
      width: 100%;
    }
  }
  .news_container {
    margin: 2rem 0;
    flex-direction: column;
    overflow-x: hidden;
    & > div {
      flex: 0 0 100%;
    }
  }
}

